tests/design/errors/views/provides.js




function map(doc) {
    var lib = require('views/lib');
    lib.view();
}

module.exports = {map}